--- a/app/src/main/res/layout/header_driver_standings.xml
+++ b/app/src/main/res/layout/header_driver_standings.xml
@@ -2,7 +2,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/DriverStandingsYear"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="10dp"
@@ -12,8 +11,20 @@
     android:background="@drawable/driver_profile_background"
     android:elevation="20dp">
 
+    <Spinner
+        android:id="@+id/DriverStandingsYearSpinner"
+        android:layout_width="wrap_content"
+        android:layout_height="53dp"
+        android:layout_marginEnd="-30dp"
+        android:spinnerMode="dropdown"
+        android:textAlignment="textEnd"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.538" />
+
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/DriverStandingsYearSpinnerText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -22,22 +33,11 @@
         android:fontFamily="@font/formula1_bold"
         android:text="Classifica Piloti"
         android:textColor="#000000"
-        android:textSize="30sp"
+        android:textSize="26sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.272" />
 
-    <Spinner
-        android:id="@+id/DriverStandingsYearSpinner"
-        android:layout_width="109dp"
-        android:layout_height="50dp"
-        android:layout_marginEnd="16dp"
-        android:elevation="20dp"
-        android:spinnerMode="dialog"
-        android:textAlignment="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
