--- a/app/src/main/res/layout/race_recycler_view.xml
+++ b/app/src/main/res/layout/race_recycler_view.xml
@@ -13,7 +13,7 @@
 
     <TextView
         android:id="@+id/nomeGara"
-        android:layout_width="160dp"
+        android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
         android:fontFamily="@font/formula1_bold"
@@ -43,7 +43,7 @@
         android:id="@+id/descrizioneGara"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="88dp"
+        android:layout_marginTop="7dp"
         android:fontFamily="@font/formula1_regular"
         android:text="@string/bahrein_ninternational_circuit"
         android:textColor="@color/black"
@@ -51,7 +51,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.091"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/nomeGara" />
 
     <ImageView
         android:id="@+id/flagGara"
