--- a/app/src/main/res/layout/fragment_circuit_info.xml
+++ b/app/src/main/res/layout/fragment_circuit_info.xml
@@ -31,7 +31,7 @@
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="4dp"
                 android:fontFamily="@font/formula1_bold"
-                android:text="1.15.484"
+                android:text=""
                 android:textColor="@color/white"
                 android:textSize="24sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -44,7 +44,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="12dp"
                 android:fontFamily="@font/formula1_bold"
-                android:text="(Lewis Hamilton 2020)"
+                android:text=""
                 android:textColor="@color/white"
                 android:textSize="14sp"
                 app:layout_constraintStart_toEndOf="@+id/lapRecord"
@@ -69,7 +69,7 @@
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="4dp"
                 android:fontFamily="@font/formula1_bold"
-                android:text="1950"
+                android:text=""
                 android:textColor="@color/white"
                 android:textSize="24sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -94,7 +94,7 @@
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="4dp"
                 android:fontFamily="@font/formula1_bold"
-                android:text="309.403 Km"
+                android:text=""
                 android:textColor="@color/white"
                 android:textSize="24sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -157,7 +157,7 @@
                 android:layout_marginTop="12dp"
                 android:layout_marginEnd="32dp"
                 android:fontFamily="@font/formula1_bold"
-                android:text="4.909 Km"
+                android:text=""
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -170,7 +170,7 @@
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="4dp"
                 android:fontFamily="@font/formula1_bold"
-                android:text="63"
+                android:text=""
                 android:textColor="@color/white"
                 android:textSize="24sp"
                 app:layout_constraintStart_toStartOf="parent"
